--- a/src/main/resources/templates/learning/work/add.html
+++ b/src/main/resources/templates/learning/work/add.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <th:block th:include="include :: header('新增学习资料管理')" />
+    <th:block th:include="include :: header('新增作业资料管理')" />
 </head>
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
-        <form class="form-horizontal m" enctype="multipart/form-data" id="form-book-add">
+        <form class="form-horizontal m" id="form-work-add">
             <div class="form-group">
                 <label class="col-sm-3 control-label">文件：</label>
                 <div class="col-sm-8">
                     <input type="file" class="form-control" id="filePath" name="filePath"/>
                 </div>
             </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label">资料名：</label>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">作业名：</label>
                 <div class="col-sm-8">
                     <input name="fileName" id="fileName" class="form-control" type="text">
                 </div>
             </div>
-            <!--<div class="form-group">
+           <!-- <div class="form-group">
                 <label class="col-sm-3 control-label">目录：</label>
                 <div class="col-sm-8">
                     <input name="path" class="form-control" type="text">
@@ -46,7 +46,7 @@
     </div>
     <th:block th:include="include :: footer" />
     <script type="text/javascript">
-        $("#form-book-add").validate({
+        $("#form-work-add").validate({
             focusCleanup: true
         });
 
@@ -58,7 +58,7 @@
 
         function uploadFile() {
             var formData = new FormData();
-            var prefix = ctx + "leaning/book";
+            var prefix = ctx + "learning/work";
             if ($('#filePath')[0].files[0] == null) {
                 $.modal.alertWarning("请先选择文件");
                 return false;
