--- a/src/main/resources/templates/learning/work/edit.html
+++ b/src/main/resources/templates/learning/work/edit.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <th:block th:include="include :: header('修改学习资料管理')" />
+    <th:block th:include="include :: header('修改作业资料管理')" />
 </head>
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
-        <form class="form-horizontal m" id="form-book-edit" th:object="${uploadLearningFileInfo}">
+        <form class="form-horizontal m" id="form-work-edit" th:object="${uploadWorkFileInfo}">
             <input name="id" th:field="*{id}" type="hidden">
             <div class="form-group">    
-                <label class="col-sm-3 control-label">资料名：</label>
+                <label class="col-sm-3 control-label">文件名：</label>
                 <div class="col-sm-8">
                     <input name="fileName" th:field="*{fileName}" class="form-control" type="text">
                 </div>
@@ -30,8 +30,8 @@
                 <div class="col-sm-8">
                     <input name="userId" th:field="*{userId}" class="form-control" type="text">
                 </div>
-            </div>-->
-            <!--<div class="form-group">
+            </div>
+            <div class="form-group">    
                 <label class="col-sm-3 control-label">关联上传人员姓名：</label>
                 <div class="col-sm-8">
                     <input name="userName" th:field="*{userName}" class="form-control" type="text">
@@ -41,14 +41,14 @@
     </div>
     <th:block th:include="include :: footer" />
     <script type="text/javascript">
-        var prefix = ctx + "leaning/book";
-        $("#form-book-edit").validate({
+        var prefix = ctx + "learning/work";
+        $("#form-work-edit").validate({
             focusCleanup: true
         });
 
         function submitHandler() {
             if ($.validate.form()) {
-                $.operate.save(prefix + "/edit", $('#form-book-edit').serialize());
+                $.operate.save(prefix + "/edit", $('#form-work-edit').serialize());
             }
         }
     </script>
