--- a/src/main/resources/templates/learning/work/work.html
+++ b/src/main/resources/templates/learning/work/work.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
-    <th:block th:include="include :: header('学习资料管理列表')" />
+    <th:block th:include="include :: header('作业资料管理列表')" />
 </head>
 <body class="gray-bg">
      <div class="container-div">
@@ -11,10 +11,10 @@
                     <div class="select-list">
                         <ul>
                             <li>
-                                <label>资料名：</label>
+                                <label>作业名：</label>
                                 <input type="text" name="fileName"/>
                             </li>
-                            <!--<li>
+                           <!-- <li>
                                 <label>目录：</label>
                                 <input type="text" name="path"/>
                             </li>-->
@@ -40,15 +40,18 @@
             </div>
 
             <div class="btn-group-sm" id="toolbar" role="group">
-                <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="leaning:book:add">
+                <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="learning:work:add">
                     <i class="fa fa-plus"></i> 添加
                 </a>
-                <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="leaning:book:edit">
+                <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="learning:work:edit">
                     <i class="fa fa-edit"></i> 修改
                 </a>
-                <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="leaning:book:remove">
+                <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="learning:work:remove">
                     <i class="fa fa-remove"></i> 删除
                 </a>
+                <!--<a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="learning:work:export">
+                    <i class="fa fa-download"></i> 导出
+                </a>-->
             </div>
             <div class="col-sm-12 select-table table-striped">
                 <table id="bootstrap-table"></table>
@@ -57,10 +60,10 @@
     </div>
     <th:block th:include="include :: footer" />
     <script th:inline="javascript">
-        var downloadFlag = [[${@permission.hasPermi('leaning:book:download')}]];
-        var editFlag = [[${@permission.hasPermi('leaning:book:edit')}]];
-        var removeFlag = [[${@permission.hasPermi('leaning:book:remove')}]];
-        var prefix = ctx + "leaning/book";
+        var downloadFlag = [[${@permission.hasPermi('learning:work:download')}]];
+        var editFlag = [[${@permission.hasPermi('learning:work:edit')}]];
+        var removeFlag = [[${@permission.hasPermi('learning:work:remove')}]];
+        var prefix = ctx + "learning/work";
 
         $(function() {
             var options = {
@@ -69,18 +72,18 @@
                 updateUrl: prefix + "/edit/{id}",
                 removeUrl: prefix + "/remove",
                 exportUrl: prefix + "/export",
-                modalName: "学习资料管理",
+                modalName: "作业资料管理",
                 columns: [{
                     checkbox: true
                 },
                 {
                     field : 'id', 
-                    title : '资料ID',
+                    title : '文件ID',
                     visible: false
                 },
                 {
                     field : 'fileName', 
-                    title : '资料名'
+                    title : '文件名'
                 },
                 {
                     field : 'path', 
@@ -93,12 +96,12 @@
                 },
                 {
                     field : 'userId', 
-                    title : '关联上传人员id',
+                    title : '上传者id',
                     visible: false
                 },
                 {
                     field : 'userName', 
-                    title : '关联上传人员姓名'
+                    title : '上传者姓名'
                 },
                 {
                     title: '操作',
