讨论答疑框架上传

--- a/src/main/resources/templates/learning/answer/info.html
+++ b/src/main/resources/templates/learning/answer/info.html
@@ -54,16 +54,16 @@
             </div>
 
             <div class="btn-group-sm" id="toolbar" role="group">
-                <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="system:info:add">
+                <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="learning:answer:add">
                     <i class="fa fa-plus"></i> 添加
                 </a>
-                <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="system:info:edit">
+                <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="learning:answer:edit">
                     <i class="fa fa-edit"></i> 修改
                 </a>
-                <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="system:info:remove">
+                <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="learning:answer:remove">
                     <i class="fa fa-remove"></i> 删除
                 </a>
-                <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="system:info:export">
+                <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="learning:answer:export">
                     <i class="fa fa-download"></i> 导出
                 </a>
             </div>
@@ -74,8 +74,8 @@
     </div>
     <th:block th:include="include :: footer" />
     <script th:inline="javascript">
-        var editFlag = [[${@permission.hasPermi('system:info:edit')}]];
-        var removeFlag = [[${@permission.hasPermi('system:info:remove')}]];
+        var editFlag = [[${@permission.hasPermi('learning:answer:edit')}]];
+        var removeFlag = [[${@permission.hasPermi('learning:answer:remove')}]];
         var prefix = ctx + "learning/answer";
 
         $(function() {
