--- a/src/main/resources/templates/learning/studentfile/add.html
+++ b/src/main/resources/templates/learning/studentfile/add.html
@@ -14,6 +14,12 @@
             </div>
         </div>
         <div class="form-group">
+            <label class="col-sm-3 control-label">作业名：</label>
+            <div class="col-sm-8">
+                <input name="fileName" id="fileName" class="form-control" type="text">
+            </div>
+        </div>
+        <div class="form-group">
             <label class="col-sm-3 control-label">作业归属：</label>
             <div class="col-sm-8">
                 <select id="workFile" class="form-control">
@@ -41,6 +47,10 @@
         var prefix = ctx + "learning/studentfile";
         if ($('#filePath')[0].files[0] == null) {
             $.modal.alertWarning("请先选择文件");
+            return false;
+        }
+        if ( $.common.isEmpty($('#fileName').val())) {
+            $.modal.alertWarning("请先填写文件名称");
             return false;
         }
 
