--- a/src/main/resources/templates/learning/studentfile/info.html
+++ b/src/main/resources/templates/learning/studentfile/info.html
@@ -68,6 +68,7 @@
     </div>
     <th:block th:include="include :: footer" />
     <script th:inline="javascript">
+        var downloadFlag = [[${@permission.hasPermi('learning:work:download')}]];
         var editFlag = [[${@permission.hasPermi('learning:studentfile:edit')}]];
         var removeFlag = [[${@permission.hasPermi('learning:studentfile:remove')}]];
         var prefix = ctx + "learning/studentfile";
@@ -110,6 +111,7 @@
                     formatter: function(value, row, index) {
                         var actions = [];
                         // actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
+                        actions.push('<a class="btn btn-info btn-xs ' + downloadFlag + '" href="javascript:void(0)" onclick="downloadFile(\'' + row.path + '\', \'' + row.fileName + '\')"><i class="fa fa-download"></i>下载</a> ');
                         actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
                         return actions.join('');
                     }
@@ -117,6 +119,11 @@
             };
             $.table.init(options);
         });
+
+        // 下载文件
+        function downloadFile(path, fileName){
+            window.location.href = ctx + "common/download/resource?path=" + path + "&fileName=" + fileName;
+        }
     </script>
 </body>
 </html>
