--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
         </div>
         <a th:href="@{/index}">
             <li class="logo hidden-xs">
-                <span class="logo-lg">RuoYi</span> 
+                <span class="logo-lg">在线课程学习系统</span>
             </li>
          </a>
         <div class="sidebar-collapse">
