--- a/src/main/resources/templates/learning/studentfile/edit.html
+++ b/src/main/resources/templates/learning/studentfile/edit.html
@@ -14,12 +14,12 @@
                     <input name="fileName" th:field="*{fileName}" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <!--<div class="form-group">
                 <label class="col-sm-3 control-label">目录：</label>
                 <div class="col-sm-8">
                     <input name="path" th:field="*{path}" class="form-control" type="text">
                 </div>
-            </div>
+            </div>-->
             <div class="form-group">    
                 <label class="col-sm-3 control-label">分数：</label>
                 <div class="col-sm-8">
@@ -27,13 +27,13 @@
                 </div>
             </div>
             <div class="form-group">    
-                <label class="col-sm-3 control-label">关联提交人id：</label>
+                <label class="col-sm-3 control-label">提交人用户名：</label>
                 <div class="col-sm-8">
                     <input name="commitUserId" th:field="*{commitUserId}" class="form-control" type="text">
                 </div>
             </div>
             <div class="form-group">    
-                <label class="col-sm-3 control-label">关联提交人姓名：</label>
+                <label class="col-sm-3 control-label">提交人姓名：</label>
                 <div class="col-sm-8">
                     <input name="commitUserName" th:field="*{commitUserName}" class="form-control" type="text">
                 </div>
@@ -47,19 +47,19 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group">    
+            <!--<div class="form-group">
                 <label class="col-sm-3 control-label">关联审批人id：</label>
                 <div class="col-sm-8">
                     <input name="correctUserId" th:field="*{correctUserId}" class="form-control" type="text">
                 </div>
-            </div>
-            <div class="form-group">    
+            </div>-->
+            <!--<div class="form-group">
                 <label class="col-sm-3 control-label">关联审批人姓名：</label>
                 <div class="col-sm-8">
                     <input name="correctUserName" th:field="*{correctUserName}" class="form-control" type="text">
                 </div>
-            </div>
-            <div class="form-group">    
+            </div>-->
+            <!--<div class="form-group">
                 <label class="col-sm-3 control-label">审批时间：</label>
                 <div class="col-sm-8">
                     <div class="input-group date">
@@ -67,7 +67,7 @@
                         <input name="correctTime" th:value="${#dates.format(lCommitWorkInfo.correctTime, 'yyyy-MM-dd')}" class="form-control" placeholder="yyyy-MM-dd" type="text">
                     </div>
                 </div>
-            </div>
+            </div>-->
         </form>
     </div>
     <th:block th:include="include :: footer" />
