--- a/src/main/resources/templates/learning/studentfile/info.html
+++ b/src/main/resources/templates/learning/studentfile/info.html
@@ -51,7 +51,7 @@
                 <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="learning:studentfile:add">
                     <i class="fa fa-plus"></i> 添加
                 </a>
-<!--                <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="learning:studentfile:edit">
+               <!--<a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="learning:studentfile:edit">
                     <i class="fa fa-edit"></i> 修改
                 </a>-->
                 <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()" shiro:hasPermission="learning:studentfile:remove">
@@ -106,11 +106,19 @@
                     title : '发布作业人'
                 },
                 {
+                    field : 'score',
+                    title : '成绩'
+                },
+                {
+                    field : 'correctTime',
+                    title : '审批时间'
+                },
+                {
                     title: '操作',
                     align: 'center',
                     formatter: function(value, row, index) {
                         var actions = [];
-                        // actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
+                        actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"  shiro:hasPermission="learning:studentfile:edit"><i class="fa fa-edit"></i>审批</a> ');
                         actions.push('<a class="btn btn-info btn-xs ' + downloadFlag + '" href="javascript:void(0)" onclick="downloadFile(\'' + row.path + '\', \'' + row.fileName + '\')"><i class="fa fa-download"></i>下载</a> ');
                         actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
                         return actions.join('');
