注册功能改善

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -85,7 +85,7 @@
 <script src="../static/ruoyi/login.js" th:src="@{/ruoyi/login.js}"></script>
 <script type="text/javascript">
     function openRegister(){
-        $.modal.open("注册", "register/view");
+        $.modal.open("注册", "register");
     }
 </script>
 </body>
