--- a/src/main/resources/templates/learning/studentfile/edit.html
+++ b/src/main/resources/templates/learning/studentfile/edit.html
@@ -23,7 +23,7 @@
             <div class="form-group">    
                 <label class="col-sm-3 control-label">分数：</label>
                 <div class="col-sm-8">
-                    <input name="score" th:field="*{score}" class="form-control" type="text">
+                    <input name="score" th:field="*{score}" maxlength="6" class="form-control" type="text">
                 </div>
             </div>
             <div class="form-group">    
