--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,15 +10,23 @@
             <input name="deptId" type="hidden" id="treeId"/>
             <h4 class="form-header h4">基本信息</h4>
             <div class="row">
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label is-required">登录账号：</label>
+                        <div class="col-sm-8">
+                            <input id="loginName" name="loginName" placeholder="请输入登录账号" class="form-control" type="text" maxlength="30" required>
+                        </div>
+                    </div>
+                </div>
             	<div class="col-sm-6">
                     <div class="form-group">
-                        <label class="col-sm-4 control-label is-required">用户名称：</label>
+                        <label class="col-sm-4 control-label is-required">用户姓名：</label>
                         <div class="col-sm-8">
                             <input name="userName" placeholder="请输入用户名称" class="form-control" type="text" maxlength="30" required>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
+                <!--<div class="col-sm-6">
                     <div class="form-group">
                         <label class="col-sm-4 control-label is-required">归属部门：</label>
                         <div class="col-sm-8">
@@ -28,7 +36,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
             <div class="row">
                 <div class="col-sm-6">
@@ -51,17 +59,17 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="form-group">
-                        <label class="col-sm-4 control-label is-required">登录账号：</label>
+                        <label class="col-sm-4 control-label is-required">登录密码：</label>
                         <div class="col-sm-8">
-                            <input id="loginName" name="loginName" placeholder="请输入登录账号" class="form-control" type="text" maxlength="30" required>
+                            <input name="password" placeholder="请输入登录密码" class="form-control" type="password" required>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="form-group">
-                        <label class="col-sm-4 control-label is-required">登录密码：</label>
+                        <label class="col-sm-4 control-label is-required">确认密码：</label>
                         <div class="col-sm-8">
-                            <input name="password" placeholder="请输入登录密码" class="form-control" type="password" th:value="${@config.getKey('sys.user.initPassword')}" required>
+                            <input name="repassword" placeholder="确认登录密码" class="form-control" type="password" required>
                         </div>
                     </div>
                 </div>
@@ -77,7 +85,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
+                <!--<div class="col-sm-6">
                     <div class="form-group">
                         <label class="col-sm-4 control-label">用户状态：</label>
                         <div class="col-sm-8">
@@ -87,9 +95,9 @@
 	                        </label>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
-            <div class="row">
+            <!--<div class="row">
             	<div class="col-sm-12">
                     <div class="form-group">
                         <label class="col-xs-2 control-label">岗位：</label>
@@ -100,8 +108,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
+            </div>-->
+            <!--<div class="row">
             	<div class="col-sm-12">
                     <div class="form-group">
                         <label class="col-xs-2 control-label">角色：</label>
@@ -112,7 +120,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <h4 class="form-header h4">其他信息</h4>
             <div class="row">
                 <div class="col-sm-12">
@@ -127,12 +135,12 @@
         </form>
     </div>
       
-    <div class="row">
+    <!--<div class="row">
         <div class="col-sm-offset-5 col-sm-10">
             <button type="button" class="btn btn-sm btn-primary" onclick="submitHandler()"><i class="fa fa-check"></i>保 存</button>&nbsp;
             <button type="button" class="btn btn-sm btn-danger" onclick="closeItem()"><i class="fa fa-reply-all"></i>关 闭 </button>
         </div>
-    </div>
+    </div>-->
 	<th:block th:include="include :: footer" />
 	<th:block th:include="include :: select2-js" />
 	<script>
@@ -162,6 +170,11 @@
         			minlength: 5,
         			maxlength: 20
         		},
+                repassword:{
+                    minlength: 5,
+                    maxlength: 20,
+                    equalTo: "#password"
+                },
         		email:{
                     email:true,
                     remote: {
@@ -202,9 +215,12 @@
         		"email": {
                     remote: "Email已经存在"
                 },
-        		"phonenumber":{
+        		"phonenumber": {
                 	remote: "手机号码已经存在"
-        		}
+        		},
+                "repassword": {
+                    equalTo: "两次密码不一致"
+                }
             },
             focusCleanup: true
         });
@@ -223,7 +239,7 @@
 	    }
          
         /*用户管理-新增-选择部门树*/
-        function selectDeptTree() {
+        /*function selectDeptTree() {
         	var treeId = $("#treeId").val();
         	var deptId = $.common.isEmpty(treeId) ? "100" : $("#treeId").val();
         	var url = ctx + "system/dept/selectDeptTree/" + deptId;
@@ -234,7 +250,7 @@
 				callBack: doSubmit
 			};
 			$.modal.openOptions(options);
-		}
+		}*/
 		
 		function doSubmit(index, layero){
 			var tree = layero.find("iframe")[0].contentWindow.$._tree;
@@ -246,12 +262,12 @@
 			}
 		}
 
-		$(function() {
+		/*$(function() {
             $('#post').select2({
                 placeholder: "请选择岗位",
                 allowClear: true
             });
-        })
+        })*/
     </script>
 </body>
 </html>
