--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" >
 <head>
-	<th:block th:include="include :: header('新增用户')" />
+	<th:block th:include="include :: header('用户注册')" />
 	<th:block th:include="include :: select2-css" />
 </head>
 <body>
     <div class="main-content">
-        <form id="form-user-add" class="form-horizontal">
+        <form id="form-user-register" class="form-horizontal">
             <input name="deptId" type="hidden" id="treeId"/>
             <h4 class="form-header h4">基本信息</h4>
             <div class="row">
@@ -61,7 +61,7 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label is-required">登录密码：</label>
                         <div class="col-sm-8">
-                            <input name="password" placeholder="请输入登录密码" class="form-control" type="password" required>
+                            <input name="password" id="password" placeholder="请输入登录密码" class="form-control" type="password" required>
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label is-required">确认密码：</label>
                         <div class="col-sm-8">
-                            <input name="repassword" placeholder="确认登录密码" class="form-control" type="password" required>
+                            <input name="repassword" id="repassword" placeholder="确认登录密码" class="form-control" type="password" required>
                         </div>
                     </div>
                 </div>
@@ -144,9 +144,9 @@
 	<th:block th:include="include :: footer" />
 	<th:block th:include="include :: select2-js" />
 	<script>
-	    var prefix = ctx + "system/user";
+	    var prefix = ctx + "register";
 	
-        $("#form-user-add").validate({
+        $("#form-user-register").validate({
         	onkeyup: false,
         	rules:{
         		loginName:{
@@ -227,14 +227,19 @@
         
         function submitHandler() {
 	        if ($.validate.form()) {
-	        	var data = $("#form-user-add").serializeArray();
-	        	var status = $("input[id='status']").is(':checked') == true ? 0 : 1;
-	        	var roleIds = $.form.selectCheckeds("role");
-	        	var postIds = $.form.selectSelects("post");
-	        	data.push({"name": "status", "value": status});
-	        	data.push({"name": "roleIds", "value": roleIds});
-	        	data.push({"name": "postIds", "value": postIds});
-	        	$.operate.saveTab(prefix + "/add", data);
+                var formData = new FormData($( "#form-user-register")[0] );
+                $.ajax({
+                    url: prefix + "/add",
+                    type: 'post',
+                    cache: false,
+                    data: formData,
+                    processData: false,
+                    contentType: false,
+                    dataType: "json",
+                    success: function (result) {
+                        $.modal.alertSuccess("注册成功！");
+                    }
+                });
 	        }
 	    }
          
@@ -252,15 +257,15 @@
 			$.modal.openOptions(options);
 		}*/
 		
-		function doSubmit(index, layero){
-			var tree = layero.find("iframe")[0].contentWindow.$._tree;
-			if ($.tree.notAllowParents(tree)) {
-				var body = layer.getChildFrame('body', index);
-    			$("#treeId").val(body.find('#treeId').val());
-    			$("#treeName").val(body.find('#treeName').val());
-    			layer.close(index);
-			}
-		}
+		// function doSubmit(index, layero){
+		// 	var tree = layero.find("iframe")[0].contentWindow.$._tree;
+		// 	if ($.tree.notAllowParents(tree)) {
+		// 		var body = layer.getChildFrame('body', index);
+    	// 		// $("#treeId").val(body.find('#treeId').val());
+    	// 		// $("#treeName").val(body.find('#treeName').val());
+    	// 		layer.close(index);
+		// 	}
+		// }
 
 		/*$(function() {
             $('#post').select2({
