--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,12 +47,12 @@
 				        </div>
 				    </div>
             	</li>
-                <!--<li>
+                <li>
 					<a href="#"><i class="fa fa-home"></i> <span class="nav-label">主页</span> <span class="fa arrow"></span></a>
 					<ul class="nav nav-second-level">
-						<li><a class="menuItem" th:href="@{/system/main}">了解若依</a></li>
+						<li><a class="menuItem" th:href="@{/system/main}">了解系统</a></li>
 					</ul>
-				</li>-->
+				</li>
                 <li th:each="menu : ${menus}">
                 	<a th:class="@{${menu.url != '' && menu.url != '#'} ? ${menu.target}}" th:href="@{${menu.url == ''} ? |#| : ${menu.url}}">
                 		<i class="fa fa-bar-chart-o" th:class="${menu.icon}"></i>
@@ -218,7 +218,7 @@
             </button>
             <nav class="page-tabs menuTabs">
                 <div class="page-tabs-content">
-<!--                    <a href="javascript:;" class="active menuTab" data-id="/system/main">首页</a>-->
+                    <a href="javascript:;" class="active menuTab" data-id="/system/main">首页</a>
                 </div>
             </nav>
             <button class="roll-nav roll-right tabRight">
