--- a/src/main/resources/templates/learning/work/work.html
+++ b/src/main/resources/templates/learning/work/work.html
@@ -60,7 +60,6 @@
     </div>
     <th:block th:include="include :: footer" />
     <script th:inline="javascript">
-        var downloadFlag = [[${@permission.hasPermi('learning:work:download')}]];
         var editFlag = [[${@permission.hasPermi('learning:work:edit')}]];
         var removeFlag = [[${@permission.hasPermi('learning:work:remove')}]];
         var prefix = ctx + "learning/work";
@@ -108,7 +107,7 @@
                     align: 'center',
                     formatter: function(value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-info btn-xs ' + downloadFlag + '" href="javascript:void(0)" onclick="downloadFile(\'' + row.path + '\', \'' + row.fileName + '\')"><i class="fa fa-download"></i>下载</a> ');
+                        actions.push('<a class="btn btn-info btn-xs" href="javascript:void(0)" onclick="downloadFile(\'' + row.path + '\', \'' + row.fileName + '\')"><i class="fa fa-download"></i>下载</a> ');
                         actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
                         actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a>');
                         return actions.join('');
